# anomaly-detector

./: .gitignore  README.md
filter/: CMakeLists.txt  detection_filter.cpp  detection_filter.h  directory_sink.cpp  directory_sink.h  directory_source.cpp  directory_source.h  exception.cpp  exception.h  frame_builder.cpp  frame_builder.h  image.cpp  image.h  main.cpp  node.cpp  node.h  normalize_filter.cpp  normalize_filter.h  source.cpp  source.h  tile_factory.cpp  tile_factory.h  tile_filter.cpp  tile_filter.h  zmq_sink.cpp  zmq_sink.h  zmq_source.cpp  zmq_source.h
filter/proto/loader/: config.proto  directory_config.proto
filter/proto/pipeline/: config.proto  detection_filter_config.proto  directory_sink_config.proto  directory_source_config.proto  frame_builder_config.proto  normalize_filter_config.proto  padding_mode.proto  tile_filter_config.proto  zmq_sink_config.proto  zmq_source_config.proto
optimizer/: requirements.txt
optimizer/csrc/augmentation/: CMakeLists.txt  main.cpp  pyproject.toml
optimizer/csrc/augmentation/test/: main.py
optimizer/src/: dataset.py  loop.py  report_writer.py  task.py  train.py
optimizer/src/nn/: networks.py  registry.py  v1.py  v2.py
optimizer/src/tasks/: evaluator.py  optimizer.py
sensor/: CMakeLists.txt  CMakePresets.json  main.cpp
